--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-foo
+<div>
+<iframe id="theIframe"
+    title="Inline Frame Example"
+    width="100%"
+    style="min-width: 375px; height: 80vh;"
+    src="https://www.deepzoom.com/trip/yzahbfym">
+</iframe>
+</div>
