--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     title="Inline Frame Example"
     width="100%"
     style="min-width: 375px; height: 80vh;"
-    src="https://www.deepzoom.com/trip/yzahbfym">
+    src="https://www.deepzoom-test.azurewebsites.net/trip/yzahbfym">
 </iframe>
 </div>
