--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <iframe id="theIframe"
     title="Inline Frame Example"
     width="100%"
-    style="max-width: 66vw; height: 80vh;"
+    style="max-width: 66vw; height: 80vh; display: flex; justify-content: center;"
     src="https://deepzoom-test.azurewebsites.net/trip/yzahbfym">
 </iframe>
 </div>
