--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<div>
+<div style="display: flex; justify-content: center;">
 <iframe id="theIframe"
     title="Inline Frame Example"
     width="100%"
-    style="max-width: 66vw; height: 80vh; display: flex; justify-content: center;"
+    style="max-width: 66vw; height: 80vh;"
     src="https://deepzoom-test.azurewebsites.net/trip/yzahbfym">
 </iframe>
 </div>
